--- a/entrypad/src/main/res/layout/activity_project_list.xml
+++ b/entrypad/src/main/res/layout/activity_project_list.xml
@@ -5,4 +5,11 @@
     android:fitsSystemWindows="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <include layout="@layout/layout_tool_bar"/>
+    <ImageView
+        android:id="@+id/iv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/leftTv"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
