--- a/entrypad/src/main/res/layout/fragment_take_photo.xml
+++ b/entrypad/src/main/res/layout/fragment_take_photo.xml
@@ -1,21 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recyclerView"
+    android:overScrollMode="never"
+    android:scrollbars="none"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <com.zx.zxutils.views.PhotoPicker.widget.ZXPhotoPickerView
-        android:id="@+id/photoPickerView"
-        android:layout_width="300dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/photoAddIv"
-        android:layout_height="72dp"/>
-    <ImageView
-        android:id="@+id/photoAddIv"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/photoPickerView"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
-        android:background="@drawable/tianjia"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="match_parent">
+
+</androidx.recyclerview.widget.RecyclerView>
